Fix responsive images with alignment CKEDITOR - refs BT#13016

--- a/app/Resources/public/css/editor.css
+++ b/app/Resources/public/css/editor.css
@@ -234,7 +234,6 @@ blockquote p {
   color: #843534;
 }
 .img-responsive {
-  display: block;
   max-width: 100%;
   height: auto;
 }
@@ -261,4 +260,10 @@ blockquote p {
 }
 .img-va-text-bottom {
     vertical-align: text-bottom;
+}
+
+@media (max-width: 767px) {
+    .img-responsive {
+        display: block;
+    }
 }
